# Physics-Modeling

./: .gitignore  README.md
PhysicsModelingDX12/PhysicsModelingDX12/: CMakeLists.txt
PhysicsModelingDX12/PhysicsModelingDX12/Engines/GridAndCameraMovement/: GridAndCameraMovement.h  main.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Camera/: DefaultCamera.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/DxInterface/: InterfaceD3D12.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Engine/: ZekrosEngine.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Gpu/: UploadBuffer.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Lighting/: LightingUtils.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Mesh/: GeometryGenerator.h  MeshTools.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Rendering/: RenderSystem.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Texture/: TextureTools.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/HEADER/PUBLIC/Utility/: CppStdUtil.h  DxgiUtil.h
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SAMPLES/: DirectX12Init.h  GridAndCameraMovement.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SOURCE/PRIVATE/Texture/: DDSTextureLoader.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SOURCE/PUBLIC/DxInterface/: InterfaceD3D12.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SOURCE/PUBLIC/Engine/: ZekrosEnginePacked.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SOURCE/PUBLIC/Font/: FontEngine.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SOURCE/PUBLIC/Mesh/: GeometryGenerator.cpp  MeshTools.cpp
PhysicsModelingDX12/PhysicsModelingDX12/STATIC/SOURCE/PUBLIC/Windows/: Windows.cpp
PhysicsModelingDX9/PhysicsModeling/: CMakeLists.txt
PhysicsModelingDX9/PhysicsModeling/1.dx9Init/: CMakeLists.txt
PhysicsModelingDX9/PhysicsModeling/2.meshloader/: d3d9framework.h
PhysicsModelingDX9/PhysicsModeling/includes/: CMakeLists.txt
PhysicsModelingDX9/PhysicsModeling/includes/Windows/: Win32.cpp
(+103 files in other folders)
